# inventory_management_api

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
.github/workflows/: pre-commit.yml
config/: urls.py
config/settings/: __init__.py  base.py  prod.py
product/: apps.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_unit_products_unit_id.py  0003_rename_categories_products_category_ids.py  0004_rename_category_ids_products_categories_and_more.py  0005_alter_products_purchase_price_and_more.py
product/models/: __init__.py  categories_model.py  products_model.py  units_model.py
product/serializers/: __init__.py  categories_serializer.py  products_serializer.py  units_serializer.py
product/signals/: __init__.py  products_signal.py
product/views/: __init__.py  categories_apiview.py  products_apiview.py  units_apiview.py
sale/: urls.py
sale/migrations/: 0001_initial.py  0002_alter_sales_slip_image.py  0003_alter_sales_slip_image.py
sale/models/: __init__.py  sales_model.py
sale/serializers/: __init__.py  sales_serializer.py
sale/views/: __init__.py  sales_apiview.py
user/: managers.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_users_managers_remove_users_date_joined_and_more.py
user/models/: __init__.py  users_model.py
user/serializers/: __init__.py  groups_serializer.py  permissions_serializer.py  users_serializer.py
user/views/: __init__.py  (+3 more)
utils/: decorators.py  file_upload_handler.py  models.py
warehouse/: apps.py  urls.py
(+24 files in other folders)
